feat: start task cv3, add profile photo, html aside part of cv and aside css styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="/style.css">
    <title>CV</title>
 </head>
 
@@ -12,7 +13,16 @@
       <div class="container header__container"></div>
    </header>
    <main class="main">
-      <div class="container main__container"></div>
+      <div class="container main__container">
+         <aside class="aside left-part">
+            <div class="left-part__img profile-img">
+               <img src="./assets/myphoto.jpg" alt="my photo">
+            </div>
+         </aside>
+         <section class="section right-part">
+            <div></div>
+         </section>
+      </div>
    </main>
    <footer class="footer">
       <div class="container footer__container"></div>
